A Few Finishing Touches
For the captcha page, I combined both an image and a checkbox in one grid element to give the impression of selecting that image. I also made some UI changes, finalizing component sizes/colors. In addition, some documentation has been made.

--- a/hackathon-react-app-bjbhdg/src/App.module.css
+++ b/hackathon-react-app-bjbhdg/src/App.module.css
@@ -25,7 +25,7 @@
 .button {
   margin-top: 10px;
   margin-bottom: 10px;
-  background-color: blue;
+  background-color: cornflowerblue;
   text-align: center;
   margin: auto;
   display: flex;
@@ -46,13 +46,14 @@
 
 .captchaImageColumn {
   display: grid;
-  grid-template-columns: 125px 125px 125px;
+  grid-template-columns: 145px 145px 145px;
   grid-gap: 10px;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
 }
 
 .captchaImageCell {
-  background-color: grey;
-  border: black
+  background-color: white;
+  border: black 1px;
+  border-style: solid;
 }
