Clean-up/One Last Console Warning Fixed
I moved the CSS for the page change button to the actual App.tsx file, since importing it from another folder seems a bit obtuse. In addition, a final console warning about not putting my app directly into the body of "index.html" was fixed.

--- a/hackathon-react-app-bjbhdg/src/pages/Pages.module.css
+++ b/hackathon-react-app-bjbhdg/src/pages/Pages.module.css
@@ -1,4 +1,4 @@
-/* Used in ALL .tsx files: */
+/* Used in ALL .tsx files in "./pages": */
 /* =========================== */
 .mainContainer {
   height: auto;
@@ -25,21 +25,6 @@
 }
 /* =========================== */
 
-/* CSS Element Specifically for App.tsx */
-/* =========================== */  
-.button {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background-color: cornflowerblue;
-  text-align: center;
-  margin: auto;
-  display: flex;
-  color: white;
-  font-family: arial;
-  font-size: 12px;
-}
-/* =========================== */
-  
 /* alertText is used for all pages in './pages' */
 /* =========================== */
 .alertText {
