Typing Cleanup + Popup Redesign in NotRobotPage
Using typescript implies that the type of each variable are declared, so I declared the types of various variables I forgot to. Lastly, instead of having a "Submit" button for NotRobotPage, I opted for having alerts pop up when pressing the checkbox every three times.

--- a/hackathon-react-app-bjbhdg/src/pages/Pages.module.css
+++ b/hackathon-react-app-bjbhdg/src/pages/Pages.module.css
@@ -29,6 +29,7 @@
 /* =========================== */
 .alertText {
   margin-bottom: 10px;
+  min-width: 500px;
   min-height: 12px;
   max-height: 24px;
   text-align: center;
